--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-set(PROJECT_NAME "MuseeSecuriseVirtuel-MethodeNaive")
+set(PROJECT_NAME "MuseeSecuriseVirtuel")
 project( ${PROJECT_NAME} )
 
 # add opencv 
@@ -7,5 +7,5 @@ find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 # compile
-add_executable( ${PROJECT_NAME}.out catmap.cpp )
-target_link_libraries( ${PROJECT_NAME}.out ${OpenCV_LIBS} )
+add_executable( ${PROJECT_NAME}-MethodeChaos.out catmap.cpp )
+target_link_libraries( ${PROJECT_NAME}-MethodeChaos.out ${OpenCV_LIBS} )
