--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -13,3 +13,7 @@ target_link_libraries( ${PROJECT_NAME}-MethodeNaive.out ${OpenCV_LIBS} )
 #compile 
 add_executable( ${PROJECT_NAME}-Detection.out oeuvredetection.cpp )
 target_link_libraries( ${PROJECT_NAME}-Detection.out ${OpenCV_LIBS} )
+
+#compile 
+add_executable( ${PROJECT_NAME}-ExportImage.out createOeuvre.cpp )
+target_link_libraries( ${PROJECT_NAME}-ExportImage.out ${OpenCV_LIBS} )
