--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -7,13 +7,18 @@ find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 # compile
-add_executable( ${PROJECT_NAME}-MethodeNaive.out blockPermutation.cpp )
-target_link_libraries( ${PROJECT_NAME}-MethodeNaive.out ${OpenCV_LIBS} )
+#add_executable( ${PROJECT_NAME}-MethodeNaive.out blockPermutation.cpp )
+#target_link_libraries( ${PROJECT_NAME}-MethodeNaive.out ${OpenCV_LIBS} )
 
 #compile 
-add_executable( ${PROJECT_NAME}-Detection.out oeuvredetection.cpp )
+add_executable( ${PROJECT_NAME}-Detection.out oeuvredetection-2.cpp )
 target_link_libraries( ${PROJECT_NAME}-Detection.out ${OpenCV_LIBS} )
 
 #compile 
-add_executable( ${PROJECT_NAME}-ExportImage.out createOeuvre.cpp )
-target_link_libraries( ${PROJECT_NAME}-ExportImage.out ${OpenCV_LIBS} )
+#add_executable( ${PROJECT_NAME}-ExportImage.out createOeuvre.cpp )
+#target_link_libraries( ${PROJECT_NAME}-ExportImage.out ${OpenCV_LIBS} )
+
+
+#compile 
+add_executable( ${PROJECT_NAME}-DetectImage.out detectSheet.cpp )
+target_link_libraries( ${PROJECT_NAME}-DetectImage.out ${OpenCV_LIBS} )
