Add ToolFunctions, fixed warnings

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -15,10 +15,14 @@ add_executable( ${PROJECT_NAME}-Detection.out oeuvredetection-2.cpp )
 target_link_libraries( ${PROJECT_NAME}-Detection.out ${OpenCV_LIBS} )
 
 #compile 
-#add_executable( ${PROJECT_NAME}-ExportImage.out createOeuvre.cpp )
-#target_link_libraries( ${PROJECT_NAME}-ExportImage.out ${OpenCV_LIBS} )
+add_executable( ${PROJECT_NAME}-ExportImage.out createOeuvre.cpp )
+target_link_libraries( ${PROJECT_NAME}-ExportImage.out ${OpenCV_LIBS} )
 
 
 #compile 
 add_executable( ${PROJECT_NAME}-DetectImage.out detectSheet.cpp )
 target_link_libraries( ${PROJECT_NAME}-DetectImage.out ${OpenCV_LIBS} )
+
+#compile 
+add_executable( ${PROJECT_NAME}-DecryptedOeuvre.out decryptOeuvre.cpp )
+target_link_libraries( ${PROJECT_NAME}-DecryptedOeuvre.out ${OpenCV_LIBS} )
